update from dw 2.0.0_rc1